# compilers-detection-from-cmake

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  detection.py  pyproject.toml
.github/workflows/: test.yml
doc/: conf.py  index.rst
src/cmake_detection/: CMakeLists.txt  __init__.py
tests/: test_import.py
